--- a/Stunning Workplace/index.html
+++ b/Stunning Workplace/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stunning Landing Page</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />  -->
     <!-- <link
@@ -16,12 +16,12 @@
     <header>
       <!-- nav bar starts  -->
       <nav>
-        <div class="nav">
+        <div class="nav"> 
           <!-- main logo starts -->
 
           <div class="logo">
             <img
-              src="/drive-download-20220723T140649Z-001/stunning-logo.png"
+              src="./drive-download-20220723T140649Z-001/stunning-logo.png"
               alt="main logo"
             />
           </div>
@@ -67,7 +67,7 @@
               <a href="#"
                 ><button class="arrowbtn">
                   <img
-                    src="/drive-download-20220723T140649Z-001/arrow-up.png"
+                    src="./drive-download-20220723T140649Z-001/arrow-up.png"
                     alt="up"
                   /></button
               ></a>
@@ -75,7 +75,7 @@
               <a href="#"
                 ><button class="arrowbtn">
                   <img
-                    src="/drive-download-20220723T140649Z-001/arrow-down.png"
+                    src="./drive-download-20220723T140649Z-001/arrow-down.png"
                     alt="down"
                   /></button
               ></a>
@@ -88,11 +88,11 @@
               <div class="tickbox">
                 <img
                   class="graytick"
-                  src="/drive-download-20220723T140649Z-001/tick-gray.png"
+                  src="./drive-download-20220723T140649Z-001/tick-gray.png"
                   alt="gray"
                 />
                 <img
-                  src="/drive-download-20220723T140649Z-001/tick-blue.png"
+                  src="./drive-download-20220723T140649Z-001/tick-blue.png"
                   alt="blue"
                   class="bluetick"
                 />
@@ -100,7 +100,7 @@
               <span class="text1">Dmm design</span>
               <img
                 class="user"
-                src="/drive-download-20220723T140649Z-001/user-pink.png"
+                src="./drive-download-20220723T140649Z-001/user-pink.png"
                 alt=""
               />
               <span class="date">20 Dec</span>
@@ -112,11 +112,11 @@
               <div class="tickbox">
                 <img
                   class="graytick"
-                  src="/drive-download-20220723T140649Z-001/tick-gray.png"
+                  src="./drive-download-20220723T140649Z-001/tick-gray.png"
                   alt="gray"
                 />
                 <img
-                  src="/drive-download-20220723T140649Z-001/tick-blue.png"
+                  src="./drive-download-20220723T140649Z-001/tick-blue.png"
                   alt="blue"
                   class="bluetick"
                 />
@@ -124,7 +124,7 @@
               <span class="text1">Blur animation</span>
               <img
                 class="user"
-                src="/drive-download-20220723T140649Z-001/user-orange.png"
+                src="./drive-download-20220723T140649Z-001/user-orange.png"
                 alt=""
               />
               <span class="date">22 Dec</span>
@@ -135,11 +135,11 @@
               <div class="tickbox">
                 <img
                   class="graytick"
-                  src="/drive-download-20220723T140649Z-001/tick-gray.png"
+                  src="./drive-download-20220723T140649Z-001/tick-gray.png"
                   alt="gray"
                 />
                 <img
-                  src="/drive-download-20220723T140649Z-001/tick-blue.png"
+                  src="./drive-download-20220723T140649Z-001/tick-blue.png"
                   alt="blue"
                   class="bluetick"
                 />
@@ -147,7 +147,7 @@
               <span class="text1">Illustration</span>
               <img
                 class="user"
-                src="/drive-download-20220723T140649Z-001/user-blue.png"
+                src="./drive-download-20220723T140649Z-001/user-blue.png"
                 alt=""
               />
               <span class="date">26 Dec</span>
@@ -159,11 +159,11 @@
               <div class="tickbox">
                 <img
                   class="graytick"
-                  src="/drive-download-20220723T140649Z-001/tick-gray.png"
+                  src="./drive-download-20220723T140649Z-001/tick-gray.png"
                   alt="gray"
                 />
                 <img
-                  src="/drive-download-20220723T140649Z-001/tick-blue.png"
+                  src="./drive-download-20220723T140649Z-001/tick-blue.png"
                   alt="blue"
                   class="bluetick"
                 />
@@ -171,7 +171,7 @@
               <span class="text1">Refunds</span>
               <img
                 class="user"
-                src="/drive-download-20220723T140649Z-001/user-orange.png"
+                src="./drive-download-20220723T140649Z-001/user-orange.png"
                 alt=""
               />
               <span class="date">28 Dec</span>
@@ -184,7 +184,7 @@
 
         <div class="image">
           <img
-            src="/drive-download-20220723T140649Z-001/landing-section-image.png"
+            src="./drive-download-20220723T140649Z-001/landing-section-image.png"
             alt=""
           />
         </div>
